--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,16 +1,32 @@
+# Usar la imagen base de Python 3.9
 FROM python:3.9-slim
 
-RUN apt-get update
+# Configurar ambiente de instalación
+ENV DEBIAN_FRONTEND=noninteractive
 
-RUN apt-get install -y curl git
+# Actualizar repositorios e instalar dependencias esenciales
+RUN apt-get update && apt-get install -y \
+    curl \
+    git \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
 
-RUN pip install aws-cdk-lib>=2.0.0 constructs>=10.0.0 boto3==1.34.125 black
+# Instalar paquetes Python requeridos
+RUN pip install --no-cache-dir \
+    aws-cdk-lib>=2.0.0 \
+    constructs>=10.0.0 \
+    boto3==1.34.125 \
+    black
 
-RUN curl -sL https://deb.nodesource.com/setup_18.x | bash - \
-  && apt-get install -y nodejs
+# Instalar Node.js y AWS CDK CLI
+RUN curl -sL https://deb.nodesource.com/setup_18.x | bash - && \
+    apt-get install -y nodejs && \
+    npm install -g aws-cdk @aws-sdk/client-s3 --unsafe-perm=true && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
 
-RUN npm install -g aws-cdk  @aws-sdk/client-s3 --unsafe-perm true
-
+# Establecer el directorio de trabajo
 WORKDIR /workspace
 
+# Configurar el contenedor para iniciar con bash
 CMD ["bash"]
